--- a/sickchill/gui/slick/css/style.css
+++ b/sickchill/gui/slick/css/style.css
@@ -345,7 +345,10 @@ inc_top.mako
 .menu-icon-emby {
     background-position: -614px 0;
 }
-
+.menu-icon-jellyfin {
+    background: url("../images/16px_jellyfin_notifier.png");
+    background-size: 16px;
+}
 .menu-icon-blackhole {
     background-position: -632px 0;
 }
@@ -2084,6 +2087,11 @@ div.metadataDiv .disabled {
 
 .icon-notifiers-emby {
     background-position: -104px 0;
+}
+
+.icon-notifiers-jellyfin {
+    background: url("../images/32px_jellyfin_notifier.png");
+    background-size: 32px; 
 }
 
 .icon-notifiers-nmj {
